sintatico.output
Grammar

    0 $accept: programa $end

    1 @1: /* empty */

    2 @2: /* empty */

    3 programa: cabecalho definicoes variaveis @1 T_INICIO lista_comandos T_FIM @2

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: /* empty */
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 definicoes: define definicoes
   10           | /* empty */

   11 define: T_DEF definicao_campos T_FIMDEF T_IDENTIF

   12 definicao_campos: tipo lista_campos definicao_campos
   13                 | tipo lista_campos

   14 lista_campos: lista_campos T_IDENTIF
   15             | T_IDENTIF

   16 tipo: T_INTEIRO
   17     | T_LOGICO
   18     | T_REGISTRO T_IDENTIF

   19 lista_variaveis: lista_variaveis T_IDENTIF
   20                | T_IDENTIF

   21 lista_comandos: /* empty */
   22               | comando lista_comandos

   23 comando: entrada_saida
   24        | repeticao
   25        | selecao
   26        | atribuicao

   27 entrada_saida: entrada
   28              | saida

   29 entrada: T_LEIA T_IDENTIF

   30 saida: T_ESCREVA expr

   31 @3: /* empty */

   32 atribuicao: T_IDENTIF @3 T_ATRIB expr

   33 @4: /* empty */

   34 @5: /* empty */

   35 selecao: T_SE expr T_ENTAO @4 lista_comandos T_SENAO @5 lista_comandos T_FIMSE

   36 @6: /* empty */

   37 @7: /* empty */

   38 repeticao: T_ENQTO @6 expr T_FACA @7 lista_comandos T_FIMENQTO

   39 expr: expr T_VEZES expr
   40     | expr T_DIV expr
   41     | expr T_MAIS expr
   42     | expr T_MENOS expr
   43     | expr T_MAIOR expr
   44     | expr T_MENOR expr
   45     | expr T_IGUAL expr
   46     | expr T_E expr
   47     | expr T_OU expr
   48     | termo

   49 expressao_acesso: T_IDENTIF

   50 @8: /* empty */

   51 expressao_acesso: T_IDPONTO @8 expressao_acesso

   52 termo: expressao_acesso
   53      | T_NUMERO
   54      | T_V
   55      | T_F
   56      | T_NAO termo
   57      | T_ABRE expr T_FECHA


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PROGRAMA (258) 4
T_INICIO (259) 3
T_FIM (260) 3
T_LEIA (261) 29
T_ESCREVA (262) 30
T_SE (263) 35
T_ENTAO (264) 35
T_SENAO (265) 35
T_FIMSE (266) 35
T_ENQTO (267) 38
T_FACA (268) 38
T_FIMENQTO (269) 38
T_MAIS (270) 41
T_MENOS (271) 42
T_VEZES (272) 39
T_DIV (273) 40
T_MAIOR (274) 43
T_MENOR (275) 44
T_IGUAL (276) 45
T_E (277) 46
T_OU (278) 47
T_NAO (279) 56
T_ATRIB (280) 32
T_ABRE (281) 57
T_FECHA (282) 57
T_INTEIRO (283) 16
T_LOGICO (284) 17
T_V (285) 54
T_F (286) 55
T_IDENTIF (287) 4 11 14 15 18 19 20 29 32 49
T_NUMERO (288) 53
T_DEF (289) 11
T_FIMDEF (290) 11
T_REGISTRO (291) 18
T_IDPONTO (292) 51


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
programa (39)
    on left: 3, on right: 0
@1 (40)
    on left: 1, on right: 3
@2 (41)
    on left: 2, on right: 3
cabecalho (42)
    on left: 4, on right: 3
variaveis (43)
    on left: 5 6, on right: 3
declaracao_variaveis (44)
    on left: 7 8, on right: 6 7
definicoes (45)
    on left: 9 10, on right: 3 9
define (46)
    on left: 11, on right: 9
definicao_campos (47)
    on left: 12 13, on right: 11 12
lista_campos (48)
    on left: 14 15, on right: 12 13 14
tipo (49)
    on left: 16 17 18, on right: 7 8 12 13
lista_variaveis (50)
    on left: 19 20, on right: 7 8 19
lista_comandos (51)
    on left: 21 22, on right: 3 22 35 38
comando (52)
    on left: 23 24 25 26, on right: 22
entrada_saida (53)
    on left: 27 28, on right: 23
entrada (54)
    on left: 29, on right: 27
saida (55)
    on left: 30, on right: 28
atribuicao (56)
    on left: 32, on right: 26
@3 (57)
    on left: 31, on right: 32
selecao (58)
    on left: 35, on right: 25
@4 (59)
    on left: 33, on right: 35
@5 (60)
    on left: 34, on right: 35
repeticao (61)
    on left: 38, on right: 24
@6 (62)
    on left: 36, on right: 38
@7 (63)
    on left: 37, on right: 38
expr (64)
    on left: 39 40 41 42 43 44 45 46 47 48, on right: 30 32 35 38 39
    40 41 42 43 44 45 46 47 57
expressao_acesso (65)
    on left: 49 51, on right: 51 52
@8 (66)
    on left: 50, on right: 51
termo (67)
    on left: 52 53 54 55 56 57, on right: 48 56


state 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


state 1

    4 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


state 3

    3 programa: cabecalho . definicoes variaveis @1 T_INICIO lista_comandos T_FIM @2

    T_DEF  shift, and go to state 6

    $default  reduce using rule 10 (definicoes)

    definicoes  go to state 7
    define      go to state 8


state 4

    4 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 4 (cabecalho)


state 5

    0 $accept: programa $end .

    $default  accept


state 6

   11 define: T_DEF . definicao_campos T_FIMDEF T_IDENTIF

    T_INTEIRO   shift, and go to state 9
    T_LOGICO    shift, and go to state 10
    T_REGISTRO  shift, and go to state 11

    definicao_campos  go to state 12
    tipo              go to state 13


state 7

    3 programa: cabecalho definicoes . variaveis @1 T_INICIO lista_comandos T_FIM @2

    T_INTEIRO   shift, and go to state 9
    T_LOGICO    shift, and go to state 10
    T_REGISTRO  shift, and go to state 11

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 14
    declaracao_variaveis  go to state 15
    tipo                  go to state 16


state 8

    9 definicoes: define . definicoes

    T_DEF  shift, and go to state 6

    $default  reduce using rule 10 (definicoes)

    definicoes  go to state 17
    define      go to state 8


state 9

   16 tipo: T_INTEIRO .

    $default  reduce using rule 16 (tipo)


state 10

   17 tipo: T_LOGICO .

    $default  reduce using rule 17 (tipo)


state 11

   18 tipo: T_REGISTRO . T_IDENTIF

    T_IDENTIF  shift, and go to state 18


state 12

   11 define: T_DEF definicao_campos . T_FIMDEF T_IDENTIF

    T_FIMDEF  shift, and go to state 19


state 13

   12 definicao_campos: tipo . lista_campos definicao_campos
   13                 | tipo . lista_campos

    T_IDENTIF  shift, and go to state 20

    lista_campos  go to state 21


state 14

    3 programa: cabecalho definicoes variaveis . @1 T_INICIO lista_comandos T_FIM @2

    $default  reduce using rule 1 (@1)

    @1  go to state 22


state 15

    6 variaveis: declaracao_variaveis .

    $default  reduce using rule 6 (variaveis)


state 16

    7 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    8                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 23

    lista_variaveis  go to state 24


state 17

    9 definicoes: define definicoes .

    $default  reduce using rule 9 (definicoes)


state 18

   18 tipo: T_REGISTRO T_IDENTIF .

    $default  reduce using rule 18 (tipo)


state 19

   11 define: T_DEF definicao_campos T_FIMDEF . T_IDENTIF

    T_IDENTIF  shift, and go to state 25


state 20

   15 lista_campos: T_IDENTIF .

    $default  reduce using rule 15 (lista_campos)


state 21

   12 definicao_campos: tipo lista_campos . definicao_campos
   13                 | tipo lista_campos .
   14 lista_campos: lista_campos . T_IDENTIF

    T_INTEIRO   shift, and go to state 9
    T_LOGICO    shift, and go to state 10
    T_IDENTIF   shift, and go to state 26
    T_REGISTRO  shift, and go to state 11

    $default  reduce using rule 13 (definicao_campos)

    definicao_campos  go to state 27
    tipo              go to state 13


state 22

    3 programa: cabecalho definicoes variaveis @1 . T_INICIO lista_comandos T_FIM @2

    T_INICIO  shift, and go to state 28


state 23

   20 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 20 (lista_variaveis)


state 24

    7 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    8                     | tipo lista_variaveis .
   19 lista_variaveis: lista_variaveis . T_IDENTIF

    T_INTEIRO   shift, and go to state 9
    T_LOGICO    shift, and go to state 10
    T_IDENTIF   shift, and go to state 29
    T_REGISTRO  shift, and go to state 11

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 30
    tipo                  go to state 16


state 25

   11 define: T_DEF definicao_campos T_FIMDEF T_IDENTIF .

    $default  reduce using rule 11 (define)


state 26

   14 lista_campos: lista_campos T_IDENTIF .

    $default  reduce using rule 14 (lista_campos)


state 27

   12 definicao_campos: tipo lista_campos definicao_campos .

    $default  reduce using rule 12 (definicao_campos)


state 28

    3 programa: cabecalho definicoes variaveis @1 T_INICIO . lista_comandos T_FIM @2

    T_LEIA     shift, and go to state 31
    T_ESCREVA  shift, and go to state 32
    T_SE       shift, and go to state 33
    T_ENQTO    shift, and go to state 34
    T_IDENTIF  shift, and go to state 35

    $default  reduce using rule 21 (lista_comandos)

    lista_comandos  go to state 36
    comando         go to state 37
    entrada_saida   go to state 38
    entrada         go to state 39
    saida           go to state 40
    atribuicao      go to state 41
    selecao         go to state 42
    repeticao       go to state 43


state 29

   19 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 19 (lista_variaveis)


state 30

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 7 (declaracao_variaveis)


state 31

   29 entrada: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 44


state 32

   30 saida: T_ESCREVA . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 52
    expressao_acesso  go to state 53
    termo             go to state 54


state 33

   35 selecao: T_SE . expr T_ENTAO @4 lista_comandos T_SENAO @5 lista_comandos T_FIMSE

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 55
    expressao_acesso  go to state 53
    termo             go to state 54


state 34

   38 repeticao: T_ENQTO . @6 expr T_FACA @7 lista_comandos T_FIMENQTO

    $default  reduce using rule 36 (@6)

    @6  go to state 56


state 35

   32 atribuicao: T_IDENTIF . @3 T_ATRIB expr

    $default  reduce using rule 31 (@3)

    @3  go to state 57


state 36

    3 programa: cabecalho definicoes variaveis @1 T_INICIO lista_comandos . T_FIM @2

    T_FIM  shift, and go to state 58


state 37

   22 lista_comandos: comando . lista_comandos

    T_LEIA     shift, and go to state 31
    T_ESCREVA  shift, and go to state 32
    T_SE       shift, and go to state 33
    T_ENQTO    shift, and go to state 34
    T_IDENTIF  shift, and go to state 35

    $default  reduce using rule 21 (lista_comandos)

    lista_comandos  go to state 59
    comando         go to state 37
    entrada_saida   go to state 38
    entrada         go to state 39
    saida           go to state 40
    atribuicao      go to state 41
    selecao         go to state 42
    repeticao       go to state 43


state 38

   23 comando: entrada_saida .

    $default  reduce using rule 23 (comando)


state 39

   27 entrada_saida: entrada .

    $default  reduce using rule 27 (entrada_saida)


state 40

   28 entrada_saida: saida .

    $default  reduce using rule 28 (entrada_saida)


state 41

   26 comando: atribuicao .

    $default  reduce using rule 26 (comando)


state 42

   25 comando: selecao .

    $default  reduce using rule 25 (comando)


state 43

   24 comando: repeticao .

    $default  reduce using rule 24 (comando)


state 44

   29 entrada: T_LEIA T_IDENTIF .

    $default  reduce using rule 29 (entrada)


state 45

   56 termo: T_NAO . termo

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expressao_acesso  go to state 53
    termo             go to state 60


state 46

   57 termo: T_ABRE . expr T_FECHA

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 61
    expressao_acesso  go to state 53
    termo             go to state 54


state 47

   54 termo: T_V .

    $default  reduce using rule 54 (termo)


state 48

   55 termo: T_F .

    $default  reduce using rule 55 (termo)


state 49

   49 expressao_acesso: T_IDENTIF .

    $default  reduce using rule 49 (expressao_acesso)


state 50

   53 termo: T_NUMERO .

    $default  reduce using rule 53 (termo)


state 51

   51 expressao_acesso: T_IDPONTO . @8 expressao_acesso

    $default  reduce using rule 50 (@8)

    @8  go to state 62


state 52

   30 saida: T_ESCREVA expr .
   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_MAIS   shift, and go to state 63
    T_MENOS  shift, and go to state 64
    T_VEZES  shift, and go to state 65
    T_DIV    shift, and go to state 66
    T_MAIOR  shift, and go to state 67
    T_MENOR  shift, and go to state 68
    T_IGUAL  shift, and go to state 69
    T_E      shift, and go to state 70
    T_OU     shift, and go to state 71

    $default  reduce using rule 30 (saida)


state 53

   52 termo: expressao_acesso .

    $default  reduce using rule 52 (termo)


state 54

   48 expr: termo .

    $default  reduce using rule 48 (expr)


state 55

   35 selecao: T_SE expr . T_ENTAO @4 lista_comandos T_SENAO @5 lista_comandos T_FIMSE
   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_ENTAO  shift, and go to state 72
    T_MAIS   shift, and go to state 63
    T_MENOS  shift, and go to state 64
    T_VEZES  shift, and go to state 65
    T_DIV    shift, and go to state 66
    T_MAIOR  shift, and go to state 67
    T_MENOR  shift, and go to state 68
    T_IGUAL  shift, and go to state 69
    T_E      shift, and go to state 70
    T_OU     shift, and go to state 71


state 56

   38 repeticao: T_ENQTO @6 . expr T_FACA @7 lista_comandos T_FIMENQTO

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 73
    expressao_acesso  go to state 53
    termo             go to state 54


state 57

   32 atribuicao: T_IDENTIF @3 . T_ATRIB expr

    T_ATRIB  shift, and go to state 74


state 58

    3 programa: cabecalho definicoes variaveis @1 T_INICIO lista_comandos T_FIM . @2

    $default  reduce using rule 2 (@2)

    @2  go to state 75


state 59

   22 lista_comandos: comando lista_comandos .

    $default  reduce using rule 22 (lista_comandos)


state 60

   56 termo: T_NAO termo .

    $default  reduce using rule 56 (termo)


state 61

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr
   57 termo: T_ABRE expr . T_FECHA

    T_MAIS   shift, and go to state 63
    T_MENOS  shift, and go to state 64
    T_VEZES  shift, and go to state 65
    T_DIV    shift, and go to state 66
    T_MAIOR  shift, and go to state 67
    T_MENOR  shift, and go to state 68
    T_IGUAL  shift, and go to state 69
    T_E      shift, and go to state 70
    T_OU     shift, and go to state 71
    T_FECHA  shift, and go to state 76


state 62

   51 expressao_acesso: T_IDPONTO @8 . expressao_acesso

    T_IDENTIF  shift, and go to state 49
    T_IDPONTO  shift, and go to state 51

    expressao_acesso  go to state 77


state 63

   41 expr: expr T_MAIS . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 78
    expressao_acesso  go to state 53
    termo             go to state 54


state 64

   42 expr: expr T_MENOS . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 79
    expressao_acesso  go to state 53
    termo             go to state 54


state 65

   39 expr: expr T_VEZES . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 80
    expressao_acesso  go to state 53
    termo             go to state 54


state 66

   40 expr: expr T_DIV . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 81
    expressao_acesso  go to state 53
    termo             go to state 54


state 67

   43 expr: expr T_MAIOR . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 82
    expressao_acesso  go to state 53
    termo             go to state 54


state 68

   44 expr: expr T_MENOR . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 83
    expressao_acesso  go to state 53
    termo             go to state 54


state 69

   45 expr: expr T_IGUAL . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 84
    expressao_acesso  go to state 53
    termo             go to state 54


state 70

   46 expr: expr T_E . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 85
    expressao_acesso  go to state 53
    termo             go to state 54


state 71

   47 expr: expr T_OU . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 86
    expressao_acesso  go to state 53
    termo             go to state 54


state 72

   35 selecao: T_SE expr T_ENTAO . @4 lista_comandos T_SENAO @5 lista_comandos T_FIMSE

    $default  reduce using rule 33 (@4)

    @4  go to state 87


state 73

   38 repeticao: T_ENQTO @6 expr . T_FACA @7 lista_comandos T_FIMENQTO
   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_FACA   shift, and go to state 88
    T_MAIS   shift, and go to state 63
    T_MENOS  shift, and go to state 64
    T_VEZES  shift, and go to state 65
    T_DIV    shift, and go to state 66
    T_MAIOR  shift, and go to state 67
    T_MENOR  shift, and go to state 68
    T_IGUAL  shift, and go to state 69
    T_E      shift, and go to state 70
    T_OU     shift, and go to state 71


state 74

   32 atribuicao: T_IDENTIF @3 T_ATRIB . expr

    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_V        shift, and go to state 47
    T_F        shift, and go to state 48
    T_IDENTIF  shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_IDPONTO  shift, and go to state 51

    expr              go to state 89
    expressao_acesso  go to state 53
    termo             go to state 54


state 75

    3 programa: cabecalho definicoes variaveis @1 T_INICIO lista_comandos T_FIM @2 .

    $default  reduce using rule 3 (programa)


state 76

   57 termo: T_ABRE expr T_FECHA .

    $default  reduce using rule 57 (termo)


state 77

   51 expressao_acesso: T_IDPONTO @8 expressao_acesso .

    $default  reduce using rule 51 (expressao_acesso)


state 78

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   41     | expr T_MAIS expr .
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_VEZES  shift, and go to state 65
    T_DIV    shift, and go to state 66

    $default  reduce using rule 41 (expr)


state 79
